# EasyToP

./: CMakeLists.txt  README.md
cmake/: CMakeLists.txt  README.md
include/: README.md  helloworld.h.in
libs/: CMakeLists.txt  helloworld.c
sources/: CMakeLists.txt  analyzer.cpp  changer.cpp  measure.cpp  optimizer.cpp  parallelizer.cpp  parser.cpp  parser2.cpp  parser3.cpp  pragma_creater.cpp
tests/: CMakeLists.txt  analyzertest.cpp  test.c
