cmake_minimum_required(VERSION 3.10)

project(helloworld VERSION 0.5)
enable_testing()
add_subdirectory(sources)
add_subdirectory(libs)
add_subdirectory(tests)

configure_file(include/helloworld.h.in include/helloworld.h)
add_test(NAME Test_1 COMMAND ./sources/helloworld)
set_tests_properties(Test_1 PROPERTIES PASS_REGULAR_EXPRESSION "hello world")
add_test(NAME Test_2 COMMAND ./sources/analyzer)
set_tests_properties(Test_2 PROPERTIES PASS_REGULAR_EXPRESSION "This is analyzer.")
add_test(NAME Test_3 COMMAND ./sources/creater)
set_tests_properties(Test_3 PROPERTIES PASS_REGULAR_EXPRESSION "This is pragma creater.")
add_test(NAME Test_4 COMMAND ./sources/optimizer)
set_tests_properties(Test_4 PROPERTIES PASS_REGULAR_EXPRESSION "This is optimizer.")
add_test(NAME Test_5 COMMAND ./sources/measure)
set_tests_properties(Test_5 PROPERTIES PASS_REGULAR_EXPRESSION "This is measure.")
